--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Alexandra</title>
+    <title>Evelyn</title>
 </head>
 
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="greetings">
-        <span>A</span>
-        <span>L</span>
         <span>E</span>
-        <span>X</span>
-        <span>A</span>
+        <span>V</span>
+        <span>E</span>
+        <span>L</span>
+        <span>Y</span>
         <span>N</span>
-        <span>D</span>
-        <span>R</span>
-        <span>A</span>
 
     </div>
     <div style="text-align: center;" class="description">
