--- a/caja_fuerte.html
+++ b/caja_fuerte.html
@@ -104,7 +104,7 @@
                 <path
                     d="M19.4626 3.99415C16.7809 2.34923 14.4404 3.01211 13.0344 4.06801C12.4578 4.50096 12.1696 4.71743 12 4.71743C11.8304 4.71743 11.5422 4.50096 10.9656 4.06801C9.55962 3.01211 7.21909 2.34923 4.53744 3.99415C1.01807 6.15294 0.221721 13.2749 8.33953 19.2834C9.88572 20.4278 10.6588 21 12 21C13.3412 21 14.1143 20.4278 15.6605 19.2834C23.7783 13.2749 22.9819 6.15294 19.4626 3.99415Z"
                     stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-            </svg> Presione para <br>  Ver Recuerdos
+            </svg> Fotos <br>  Ver Recuerdos
         </button>
     </div>
 
@@ -175,7 +175,7 @@
         <!-- Contenido de la carta -->
         <div class="contenido-carta">
             <p>
-                Srta. Alexandra,<br>
+                Srta. Evelyn,<br>
                 Ud. siempre esta en mi corazón, quiero que sepa que aunque no nos veamos tan seguido como quisiéramos, siempre esta presente en mis pensamientos y en mi corazón. Su amistad es un regalo muy valioso para mí y la quiero mucho. ¡Feliz San Valentín!.<br>Un beso! 😘<br>
                 Con todo mi cariño,<br>
                 El que nunca la olvida!
