--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </div>
     <div style="text-align: center;" class="description">
-        <span >La quiero mucho 💝 de 🐣 <br> ¿LE GUSTARÍA SER MI SAN VALENTÍN? <br>Me pase un dos día y no me importa! </span>
+        <span >La quiero mucho 💝 de 🐣 <br> ¿LE GUSTARÍA SER MI SAN VALENTÍN? <br>Me pase dos días y no me importa! 😅😅</span>
     </div>
     <div class="button">
         <button class="botones">
