--- a/juego.html
+++ b/juego.html
@@ -9,8 +9,8 @@
 <body>
     <audio id="musica" src="sound/Kurt-La_Mujer_Perfecta.mp3" loop></audio>
     <div class="container">
-        <h1>¡Captura los corazones! ❤️</h1>
-        <p>Debes capturar 10 corazones para el siguiente nivel.</p>
+        <h1>¡Capture los corazones! ❤️</h1>
+        <p>Debe capturar 10 corazones para el siguiente nivel.</p>
         
         <div class="progress-bar">
             <div class="progress"></div>
