--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="greetings">
-        <span>E</span>
-        <span>V</span>
-        <span>E</span>
-        <span>L</span>
-        <span>Y</span>
+        <span>A</span>
         <span>N</span>
+        <span>D</span>
+        <span>R</span>
+        <span>E</span>
+        <span>A</span>
 
     </div>
     <div style="text-align: center;" class="description">
