--- a/caja_fuerte.html
+++ b/caja_fuerte.html
@@ -112,7 +112,7 @@
 <div id="seccion-galeria" class="seccion-galeria">
     <!-- Título de la galería -->
     <div class="titulo-galeria">
-        <h1>Nuestros Recuerdos</h1>
+        <h1>Sus Recuerdos</h1>
     </div>
 
     <!-- Contenedor de las fotos -->
