update caja fuerte

--- a/caja_fuerte.html
+++ b/caja_fuerte.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Contenedor de la caja fuerte -->
-    <audio id="musica" src="sound/Madre-Amiga-Fiel.mp3" loop></audio>
+    <audio id="musica" src="sound/Mi _MadrecitaBella.m4a" loop></audio>
 <div>
     <div class="container">
         <div class="caja-fuerte">
@@ -112,7 +112,7 @@
 <div id="seccion-galeria" class="seccion-galeria">
     <!-- Título de la galería -->
     <div class="titulo-galeria">
-        <h1>Recuerdos Madre e Hijo</h1>
+        <h1>Recuerdos Madre e Hija</h1>
     </div>
 
     <!-- Contenedor de las fotos -->
@@ -122,7 +122,7 @@
         <img src="./img/img3.jpg" alt="Foto 3" onclick="openModal(this)">
         <img src="./img/img4.jpg" alt="Foto 4" onclick="openModal(this)">
         <img src="./img/img5.jpg" alt="Foto 5" onclick="openModal(this)">
-        <img src="./img/img6.jpg" alt="Foto 6" onclick="openModal(this)">
+        <img src="./img/tuyo.jpg" alt="Foto 6" onclick="openModal(this)">
     </div>
 
     <!-- Modal para la imagen ampliada -->
@@ -176,10 +176,9 @@
         <div class="contenido-carta">
             <p>
                 Feliz Día de las Madres, mi guerrera de la vida,<br>Mamita linda,<br>
-                Hoy quiero decirte lo que a veces las palabras no alcanzan a expresar. Tú, que desde que tengo memoria, saliste a las calles con dignidad y coraje a ganarte la vida con trabajo honrado. Tú, que con tus manos cansadas, pero llenas de amor, sembraste en mí el valor del esfuerzo, la disciplina y la humildad.
-
-Gracias a ti, mamá, hoy soy profesional, tengo mi título de Ingeniero, mi Maestría, y llevo con orgullo el uniforme de la Marina del Ecuador. Cada logro mío tiene tu nombre grabado, porque tú me levantaste con tus enseñanzas, con tu ejemplo y con tu amor infinito..<br>Eres mi ejemplo más grande de lucha y perseverancia. Lo que soy, te lo debo a ti.
-Y si alguna vez te preguntaste si valió la pena… mírame ahora, mamá: tú eres mi mayor orgullo, y yo el reflejo de tu sacrificio. <br>¡Feliz día, mi reina luchadora! <br>Te amo con toda mi alma. 😘<br>
+                Que suerte tengo yo de poder llamarte a ti mamá, de haber venido a este mundo a través de ti y de poder dar cada paso contigo a mi lado, así que gracias por ser cómplice y maestra por siempre estar a mi lado y enseñarme el verdadero significado del amor incondicional.<br>Gracias por ser una constante en mi vida, por tomar mi mano cuando la necesitaba, por secar mis lagrimas y ser eco de mis risas, gracias por darme el empujoncito que necesito para seguir adelante, por ser confidente en los momentos difíciles y por celebrar conmigo en los momentos mas felices.
+ <br>Querida mamá, gracias por ser mi mamá.
+<br>Te amo con toda mi alma. 😘<br>
                 
             </p>
         </div>
