--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <span>A</span>
     </div>
     <div style="text-align: center;" class="description">
-        <span>La quiero mucho Madrecita de mi 馃挐<br> 驴LE GUSTAR脥A TENER UN NIETO?</span>
+        <span>La quiero mucho Madrecita de mi Corazón<br> ¿LE GUSTARÍA TENER UN NIETO?</span>
     </div>
     <div class="container-botones">
         <button class="botones" id="si-btn">
-            <a href="juego.html" style="color: #fff; text-decoration: none;">S脥</a>
+            <a href="juego.html" style="color: #fff; text-decoration: none;">SI</a>
         </button>
         <button class="botones" id="no-btn">NO</button>
     </div>
