--- a/juego.html
+++ b/juego.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
-    <audio id="musica" src="sound/Madre-Amiga-Fiel.mp3" loop></audio>
+    <audio id="musica" src="sound/Mi _MadrecitaBella.m4a" loop></audio>
     <div class="container">
-        <h1>¡Capture a sus nietos! 👶</h1>
+        <h1>¡Capture a sus nietos! 👧🏻</h1>
         <p>Debe capturar a 10 nietos  para el siguiente nivel.</p>
         
         <div class="progress-bar">
